펀시스템 프로그램들을 메인 액티비티에 띄워주는 기능 구현, 키워드DB 관리하는 클래스들 구현
펀시스템 웹페이지에서 파싱해와서 DB에 저장했던 데이터들을 메인 액티비티의 화면에 띄워서 보여주는 기능을 구현했습니다.
RecyclerView를 이용하여 구현했고, 서비스와 액티비티간의 상호작용을 위해 ResultReceiver를 추가하여 사용했습니다.
키워드들을 관리하게 될 클래스들을 구현했습니다. 하지만 아직 프론트엔드는 구현되지 않았습니다.
인터페이스들을의 디자인을 조금씩 수정했고, 메인 액티비티에서 설정 버튼을 누르면 세팅 액티비티가 나오도록 해놨습니다.

--- a/SoongsilFunNoti/app/src/main/res/layout/activity_main.xml
+++ b/SoongsilFunNoti/app/src/main/res/layout/activity_main.xml
@@ -1,92 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relative_layout_programs"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#006e93">
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/text_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:layout_height="48dp"
+        android:text="숭실대학교 펀시스템"
+        android:textSize="20dp"
+        android:textColor="#FFFFFF"
+        android:gravity="center"
+        android:background="#00a7cb"/>
 
-        <TextView
-            android:id="@+id/text_department"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="부서"
-            android:paddingTop="8dp"
-            android:paddingLeft="8dp"
-            android:textSize="16dp"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_programs"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/text_title"
+        android:paddingBottom="3dp"/>
 
-        <TextView
-            android:id="@+id/text_program_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/text_department"
-            android:paddingTop="8dp"
-            android:paddingLeft="8dp"
-            android:textSize="20dp"
-            android:text="프로그램 제목"/>
-
-        <TextView
-            android:id="@+id/text_start_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/text_wave_dash"
-            android:layout_below="@id/text_program_title"
-            android:text="0000.00.00()"/>
-
-        <TextView
-            android:id="@+id/text_wave_dash"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/text_end_date"
-            android:layout_below="@id/text_program_title"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:text="~"/>
-
-        <TextView
-            android:id="@+id/text_end_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/text_program_title"
-            android:paddingRight="8dp"
-            android:text="0000.00.00()"/>
-
-        <TextView
-            android:id="@+id/text_D-Day"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="D-n"
-            android:paddingRight="8dp"
-            android:textSize="20dp"/>
-
-    </RelativeLayout>
-
-    <Space
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_alignBottom="@id/text_title"
+        android:layout_alignRight="@id/text_title"
+        android:text="설정"
+        android:onClick="onSettingButtonClick"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="설정"/>
-
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
