--- a/SoongsilFunNoti/app/src/main/res/layout/layout_keyword.xml
+++ b/SoongsilFunNoti/app/src/main/res/layout/layout_keyword.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="1dp"
+    android:background="#FFFF"
     android:orientation="horizontal">
 
     <TextView
