--- a/SoongsilFunNoti/app/src/main/res/values/styles.xml
+++ b/SoongsilFunNoti/app/src/main/res/values/styles.xml
@@ -3,9 +3,13 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">#00a7cb</item>
+        <item name="colorPrimaryDark">#00a7cb</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">#00222e</item>
+
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
 </resources>
