키워드 저장, 삭제 기능 구현. 액션바 구현
키워드 저장, 삭제 기능을 모두 구현했습니다. 키워드의 인터페이스는 RecyclerView를 이용했습니다.
액션바를 구현했습니다.
액션바에 필요한 아이콘들과 키워드 추가, 삭제에 필요한 아이콘들을 추가했습니다

--- a/SoongsilFunNoti/app/src/main/res/layout/layout_keyword.xml
+++ b/SoongsilFunNoti/app/src/main/res/layout/layout_keyword.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="1dp"
-    android:background="#FFFF"
-    android:orientation="horizontal">
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp"
+    android:orientation="horizontal"
+    android:background="#FFFF">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="키워드 1"
-        android:textSize="16dp"/>
+<TextView
+    android:id="@+id/text_keyword"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="8dp"
+    android:text="키워드"
+    android:textSize="16dp"/>
 
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+<ImageView
+    android:id="@+id/image_minus"
+    android:layout_centerInParent="true"
+    android:layout_alignParentRight="true"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginRight="20dp"
+    android:src="@drawable/ic_action_minus"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="삭제"/>
-
-</LinearLayout>
+</RelativeLayout>
