--- a/SoongsilFunNoti/app/src/main/res/layout/activity_main.xml
+++ b/SoongsilFunNoti/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relative_layout_programs"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#006e93">
 
-    <TextView
-        android:id="@+id/text_title"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:text="숭실대학교 펀시스템"
-        android:textSize="20dp"
-        android:textColor="#FFFFFF"
-        android:gravity="center"
-        android:background="#00a7cb"/>
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_programs"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/text_title"
         android:paddingBottom="3dp"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/text_title"
-        android:layout_alignRight="@id/text_title"
-        android:text="설정"
-        android:onClick="onSettingButtonClick"/>
-
-</RelativeLayout>
+</LinearLayout>
