--- a/SoongsilFunNoti/app/src/main/res/layout/activity_setting.xml
+++ b/SoongsilFunNoti/app/src/main/res/layout/activity_setting.xml
@@ -5,16 +5,6 @@
     android:orientation="vertical"
     android:background="#006e93">
 
-    <TextView
-        android:id="@+id/text_title"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:text="알림 설정"
-        android:textSize="20dp"
-        android:textColor="#FFFFFF"
-        android:gravity="center"
-        android:background="#00a7cb"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -88,12 +78,12 @@
         android:layout_weight="1"
         android:background="#FFFF">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/text_add_keyword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
@@ -105,75 +95,28 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
 
-            <Button
+            <ImageView
+                android:layout_centerInParent="true"
+                android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="추가"/>
+                android:layout_marginRight="24dp"
+                android:src="@drawable/ic_action_plus"
+                android:onClick="onClickPlusButton"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
-            android:id="@+id/linear_layout_keywords"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_keywords"
+            android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
+            android:layout_marginRight="4dp"
             android:paddingBottom="1dp"
-            android:orientation="vertical"
-            android:background="#006e93">
+            android:background="#006e93"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="1dp"
-                android:orientation="horizontal"
-                android:background="#FFFF">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="8dp"
-                    android:text="키워드 1"
-                    android:textSize="16dp"/>
-
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="삭제"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="1dp"
-                android:orientation="horizontal"
-                android:background="#FFFF">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="8dp"
-                    android:text="키워드 2"
-                    android:textSize="16dp"/>
-
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="삭제"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
 
     </LinearLayout>
 
