모든 기능들 구현 1차 완료
키워드 알림 기능, 백그라운드에서 새로운 프로그램 체크하는 기능 등 계획했던 모든 기능들을 구현했습니다.

--- a/SoongsilFunNoti/app/src/main/res/layout/activity_setting.xml
+++ b/SoongsilFunNoti/app/src/main/res/layout/activity_setting.xml
@@ -36,6 +36,7 @@
                 android:paddingLeft="8dp"
                 android:paddingBottom="8dp"
                 android:visibility="invisible"
+                android:textColor="#62c6c6"
                 android:text="ON"/>
 
             <TextView
@@ -46,6 +47,7 @@
                 android:paddingLeft="8dp"
                 android:paddingBottom="8dp"
                 android:visibility="visible"
+                android:textColor="#bebfbf"
                 android:text="OFF"/>
 
         </RelativeLayout>
@@ -58,11 +60,13 @@
             android:layout_weight="1"/>
 
         <Switch
+            android:id="@+id/switch_alarm_on_off"
+            android:track="@drawable/switch_track_selector"
+            android:thumb="@drawable/switch_thumb"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="20dp"
             android:layout_gravity="center"
-            android:textSize="20dp"
-            android:padding="8dp"/>
+            android:paddingRight="16dp"/>
 
     </LinearLayout>
 
