새로고침 기능 추가, 백그라운드 서비스 수정
SwipeRefreshLayout을 이용한 새로고침 기능을 추가했습니다.
백그라운드 서비스를 일부 수정했습니다.

--- a/SoongsilFunNoti/app/src/main/res/layout/activity_main.xml
+++ b/SoongsilFunNoti/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,20 @@
     android:orientation="vertical"
     android:background="#006e93">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_programs"
-        android:scrollbars="vertical"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout_main_activity"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="3dp"/>
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_programs"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="3dp"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
 
 </LinearLayout>
