--- a/SoongsilFunNoti/app/src/main/res/layout/activity_main.xml
+++ b/SoongsilFunNoti/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#006e93">
+
+    <ImageView
+        android:id="@+id/image_view_loading"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/ic_refresh"
+        android:visibility="visible"
+        android:scaleType="centerCrop"/>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout_main_activity"
@@ -21,4 +30,6 @@
 
 
 
-</LinearLayout>
+
+
+</RelativeLayout>
