다크모드 적용
어플에서 안드로이드10의 다크모드를  이용할 수 있도록 하였습니다.
다크모드에서 사용할 style, color들을 새로 정의하고, 어플 내에서 사용하는 일부 아이콘의 색상을 변경하였습니다.

--- a/SoongsilFunNoti/app/src/main/res/drawable/switch_track_off.xml
+++ b/SoongsilFunNoti/app/src/main/res/drawable/switch_track_off.xml
@@ -10,7 +10,7 @@
         android:height="20dp" />
 
     <solid
-        android:color="#bebfbf" />
+        android:color="@color/colorSwitchBackground" />
 
     <!--stroke
         android:width="2dp"
