--- a/SoongsilFunNoti/app/src/main/res/drawable/switch_thumb.xml
+++ b/SoongsilFunNoti/app/src/main/res/drawable/switch_thumb.xml
@@ -15,7 +15,7 @@
                 android:height="19dp" />
 
             <solid
-                android:color="#FFFFFF" />
+                android:color="@color/colorSwitch" />
 
             <stroke
                 android:width="1dp"
