--- a/SoongsilFunNoti/app/src/main/res/layout/activity_main.xml
+++ b/SoongsilFunNoti/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#006e93">
+    android:background="@color/colorBackground">
 
     <ImageView
         android:id="@+id/image_view_loading"
