--- a/SoongsilFunNoti/app/src/main/res/values-night/styles.xml
+++ b/SoongsilFunNoti/app/src/main/res/values-night/styles.xml
@@ -6,9 +6,13 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColor">#00222e</item>
-        <item name="android:textColorPrimary">#FFFFFF</item>
-        <item name="android:textColorSecondary">#454545</item>
+        <item name="android:textColor">#A9A9A9</item>
+        <item name="android:textColorPrimary">#A9A9A9</item>
+        <item name="android:textColorSecondary">#757575</item>
+    </style>
+
+    <style name="ActionBarTextColor" parent="android:TextAppearance.Holo.Widget.ActionBar.Title">
+        <item name="android:textColor">#ffffff</item>
     </style>
 
 </resources>
