--- a/SoongsilFunNoti/app/src/main/res/values/colors.xml
+++ b/SoongsilFunNoti/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#00a7cb</color>
+    <color name="colorPrimaryDark">#00a7cb</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorPlate">#FFFF</color>
+    <color name="colorBackground">#006e93</color>
+    <color name="colorHighlight">#62c6c6</color>
+    <color name="colorSwitch">#FFFFFF</color>
+    <color name="colorSwitchBackground">#BEBFBF</color>
 </resources>
