--- a/SoongsilFunNoti/app/src/main/res/values-night/colors.xml
+++ b/SoongsilFunNoti/app/src/main/res/values-night/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00021E</color>
-    <color name="colorPrimaryDark">#00021E</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorPlate">#303030</color>
-    <color name="colorBackground">#001531</color>
-    <color name="colorHighlight">#005D5E</color>
+    <color name="colorPlate">#1B1B1B</color>
+    <color name="colorBackground">#000000</color>
+    <color name="colorHighlight">#003948</color>
     <color name="colorSwitch">#303030</color>
     <color name="colorSwitchBackground">#151616</color>
 </resources>
