알림 메시지 수정, 원활한 다크모드 이용을 위하여 일부 글자 색 변경

--- a/SoongsilFunNoti/app/src/main/res/layout/activity_setting.xml
+++ b/SoongsilFunNoti/app/src/main/res/layout/activity_setting.xml
@@ -47,7 +47,7 @@
                 android:paddingLeft="8dp"
                 android:paddingBottom="8dp"
                 android:visibility="visible"
-                android:textColor="#bebfbf"
+                android:textColor="#6F7070"
                 android:text="OFF"/>
 
         </RelativeLayout>
@@ -112,7 +112,7 @@
                 android:paddingLeft="8dp"
                 android:paddingBottom="8dp"
                 android:visibility="visible"
-                android:textColor="#bebfbf"
+                android:textColor="#6F7070"
                 android:text="키워드 알림만 받습니다"/>
 
         </RelativeLayout>
